# datagouv-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  main.py  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_general.yml
.github/workflows/: contribution-reminder.yml
helpers/: browser_ui.py  catalog_ui.py  crawler_api_client.py  datagouv_api_client.py  export_utils.py  logging.py  matomo.py  mcp_tool_defaults.py  metrics_api_client.py  query_text.py  tabular_api_client.py  user_agent.py
tests/: test_browser_ui.py  test_datagouv_api.py  test_export_utils.py  test_matomo.py  test_metrics_api.py  test_tool_logging.py
tools/: download_and_parse_resource.py  get_dataservice_info.py  get_dataservice_openapi_spec.py  get_dataset_info.py  get_metrics.py  get_resource_info.py  list_dataset_resources.py  query_resource_data.py  search_dataservices.py  search_datasets.py
web_ui/: __init__.py  app.js  index.html  styles.css
